app-mango-cart/kustomize/base/1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-cart
  namespace: ns-mango
  labels:
    app: lbl-app-cart
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: lbl-app-cart
  template:
    metadata:
      labels:
        app: lbl-app-cart
    spec:
      serviceAccountName: sa-mango
      nodeSelector:
        rdzpool: user
      containers:
      - name: con-cart
        image: xxx # << updated via kustomization.yaml.
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
          - containerPort: 8080
            name: http
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 2
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 2
          failureThreshold: 3
        volumeMounts:
          - name: secrets-store
            mountPath: /mnt/secrets-store
            readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: spc-mango
---
