app-mango-cart/kustomize/base/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-cart
  namespace: ns-mango
spec:
  selector:
    app: lbl-app-cart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
